# python-binding

./: CMakeLists.txt  README.md  swig-example.cpp  swig-example.h
liba/: CMakeLists.txt
swig/: CMakeLists.txt  swig-example.i
swig-example/: CMakeLists.txt  swig-example.h
swig-example/bindings/swig/: CMakeLists.txt  swig-example.i
swig-example/bindings/swig/functions/: PerlFunctions.cmake  PythonFunctions.cmake
swig-example/bindings/swig/perl/: CMakeLists.txt
swig-example/bindings/swig/python/: CMakeLists.txt
swig/perl/: CMakeLists.txt
swig/python/: CMakeLists.txt
swig_example/: CMakeLists.txt
swig_example/bindings/swig/: CMakeLists.txt  swig_example.i
swig_example/bindings/swig/functions/: PerlFunctions.cmake  PythonFunctions.cmake
swig_example/third party/: LICENSE  swig-example.cpp
